Fix layout problems

--- a/src/app/right-menu/best-post-list/best-post-list.component.css
+++ b/src/app/right-menu/best-post-list/best-post-list.component.css
@@ -3,8 +3,9 @@ a {
 }
 
 .best-posts-container {
-    background-color: #F8F8F8;
-    padding: 6px 0px;
+    background-color: darkgray;
+    border-radius: 5px;
+    padding: 5px 5px;
     margin-top: 10px;
     margin-bottom: 5px;
 }
