--- a/src/app/right-menu/subscribe/subscribe.component.css
+++ b/src/app/right-menu/subscribe/subscribe.component.css
@@ -1,7 +1,8 @@
 
 .subscribe-container {
-    background-color: #F8F8F8;
-    padding: 6px 0px;
+    background-color: darkgray;
+    border-radius: 5px;
+    padding: 5px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -13,8 +14,7 @@
 
 input[type=text] {
     padding: 6px;
-    margin-left: 5px;
-    margin-top: 5px;
+    border-radius: 5px 0px 0px 5px;
     font-size: 17px;
     border: none;
     width: 100%;
@@ -25,7 +25,8 @@ button:hover {
 }
 
 button {
-    padding: 6px 10px;
+    padding: 2px 10px;
+    border-radius: 0px 5px 5px 0px;
     background: #ddd;
     font-size: 17px;
     border: none;
